fix: align layout

--- a/app-next/portfolio/app/globals.css
+++ b/app-next/portfolio/app/globals.css
@@ -2,26 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html, body {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+@layer components {
+  .size-xxl {
+    @apply text-3xl w-full font-bold mb-6
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  .size-xl {
+    @apply text-2xl w-full mt-6 mb-1.5 font-medium
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .size-lg {
+    @apply text-xl w-full mt-4 mb-1
   }
 }
